# diesel_full_text_search

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: simple.rs
src/: lib.rs
