[package]
name = "diesel_full_text_search"
version = "1.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
description = "Adds support for PostgreSQL full text search to Diesel"
license = "MIT"
repository = "https://github.com/diesel-rs/diesel_full_text_search"

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "6eae69f3e60b45c383927336b48b6ee860a71e00", features = ["postgres"] }
