[package]
name = "diesel_full_text_search"
version = "2.1.0"
description = "Adds support for PostgreSQL full text search to Diesel"
license = "MIT"
repository = "https://github.com/diesel-rs/diesel_full_text_search"

[dependencies]
diesel = { version = "~2.1.0", features = ["postgres_backend"], default-features = false }

[features]
default = ["with-diesel-postgres"]
with-diesel-postgres = ["diesel/postgres"]
